[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.20.0"
swarm_nl = { path = "../swarm_nl", features = ["tokio-runtime"] }
tokio = { version = "1.37.0", features = ["full"] }
base58 = "0.2.0"
