[package]
name = "swarm-nl"
version = "0.2.0"
edition = "2021"
authors = ["Adedeji Adebayo <adedeji@algorealm.org>", "Sacha Lansky <sacha@algorealm.org>"]
description = "A library to build custom networking layers for decentralized and distributed applications."
license = "Apache-2.0"
repository = "https://github.com/algorealmInc/SwarmNL"
readme = "README.md"
keywords = ["web3", "swarm", "libp2p", "networking", "p2p"]  # Relevant tags
categories = ["networking", "science"]

[dependencies]
rust-ini = "0.20.0"
thiserror = "1.0.58"
rand = "0.8.5"
libp2p = { version="0.53.2", "features"=["async-std", "macros", "ping", "tokio", "tcp", "noise", "yamux", "quic", "tls", "dns", "kad", "identify", "request-response", "cbor", "gossipsub"] }
libp2p-identity = { version="0.2.8", "features"=["secp256k1", "ecdsa", "rsa", "ed25519"] }
futures = "0.3.30"
futures-time = "3.0.0"
serde = { version = "1.0.2", features = ["derive"] }
base58 = "0.2.0"
async-trait = "0.1.83"
serde_json = "1.0.133"

[dependencies.async-std]
version = "1.12.0"
optional = true

[dependencies.tokio]
version = "1.37.0"
optional = true
features = ["full"]

[features]
tokio-runtime = ["tokio"]
async-std-runtime = ["async-std"]
default = ["tokio-runtime"]

test-listening-node = []
test-dialing-node = []
test-server-node = []
test-client-node = []
test-reading-node = []
test-writing-node = []
test-subscribe-node = []
test-query-node = []
test-broadcast-node = []
