[package]
name = "swarm_nl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.20.0"
thiserror = "1.0.58"
rand = "0.8.5"
libp2p = { version="0.53.2", "features"=["ping", "tokio", "async-std", "macros", "ping", "async-std", "tokio", "tcp", "noise", "yamux", "quic", "tls", "dns", "kad", "identify"] }
libp2p-identity = { version="0.2.8", "features"=["secp256k1", "ecdsa", "rsa", "ed25519"] }
futures = "0.3.30"
futures-timer = "3.0.3"
void = "1.0.2"
tracing = "0.1.40"

[dependencies.async-std]
version = "1.12.0"
optional = true

[dependencies.tokio]
version = "1.37.0"
optional = true

[features]
tokio-runtime = ["tokio"]
async-std-runtime = ["async-std"]