[package]
name = "swarm_nl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.20.0"
thiserror = "1.0.58"
rand = "0.8.5"
libp2p = { version="0.53.2", "features"=["async-std", "macros", "ping", "tokio", "tcp", "noise", "yamux", "quic", "tls", "dns", "kad", "identify", "request-response", "cbor"] }
libp2p-identity = { version="0.2.8", "features"=["secp256k1", "ecdsa", "rsa", "ed25519"] }
futures = "0.3.30"
futures-time = "3.0.0"
serde = "1.0.200"
async-trait = "0.1.80"
base58 = "0.2.0"
async-std = "1.12.0"

[dependencies.tokio]
version = "1.37.0"
optional = true

[features]
tokio-runtime = ["tokio"]
async-std-runtime = []
