[package]
name = "http_client_model"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.20.0"
swarm_nl = { git = "https://github.com/algorealmInc/SwarmNL.git", features = ["tokio-runtime"] }
tokio = { version = "1.37.0", features = ["full"] }
# async-std = { version = "1.12", features = ["attributes"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.216"
serde_json = "1.0.133"

[features]
client = []
first-node = []
second-node = []
third-node = []
