[package]
name = "echo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swarm_nl = { path = "../../swarm_nl", features = ["tokio-runtime"] }
tokio = { version = "1.37.0", features = ["full"] }