[package]
name = "file_sharing_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.20.0"
swarm_nl = { git = "https://github.com/algorealmInc/SwarmNL.git", features = ["async-std-runtime"] }
async-std = { version = "1.12", features = ["attributes"] }

[features]
first-node = []
second-node = []