[package]
name = "simple_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.20.0"
swarm_nl = { git = "https://github.com/algorealmInc/SwarmNL.git", features = ["tokio-runtime"] }
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"

[features]
first-node = []
second-node = []